2003-06-09  Pavel Roskin  <proski@gnu.org>

	* editkeys.c (emacs_key_map): Move Atl-'>' and Alt-'<' ...
	(common_key_map): ... here.

2003-06-05  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* editcmd.c (edit_ext_cmd): Fix memory leak.

2003-05-30  Michal Szwaczko  <mikey@scene.pl>

	* editcmd.c: Implement pasting the output of any external
	command.
	* editmenu.c: Add menu entries for that.
	* editcmddef.h: Add new command CK_ExtCmd.

2003-04-04  Adam Byrtek  <alpha@debian.org>

	* edit.c: Move edit_modification() before actions to provide
	proper repainting if there are dialogs invoked by actions.

	* editlock.c: Split lock into user@host and pid and report them
	separately.

2003-04-02  Pavel Roskin  <proski@gnu.org>

	* edit.c (edit_load_file): Use vfs_file_is_local(), not
	vfs_current_is_local().
	* editlock.c (edit_lock_file): Disable locking on VFS.

2003-04-01  Adam Byrtek  <alpha@debian.org>

	* editlock.c, editlock.h: New files. Implement file locking in
	Emacs style, as documented in JED editor sources.
	* Makefile.am: Add those files to build tree.

	* edit-widget.c (WEdit): New property 'locked', 0 on edit_init.
	* edit.c (edit_modification): Lock buffer on modification.
	* editcmd.c (edit_save_cmd, edit_save_as_cmd): Handle locking
	during file save.
	(edit_load_file_from_filename): Unlock.  Remove 2 duplicate
	lines (handled by edit_init).
	(edit_quit_cmd): Unlock.

2003-03-12  Pavel Roskin  <proski@gnu.org>

	* edit.h: Make it easier to tweak buffer size and maximal number
	of buffers.

2003-03-07  Pavel Roskin  <proski@gnu.org>

	* editkeys.c (common_key_map): Delete previous word by
	Alt-Backspace.  Fix Ctrl-Backspace on some terminals.
	Reported by Andrew V. Samoilov <sav@bcs.zp.ua>

2003-03-06  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* syntax.c (edit_read_syntax_file): Fix segmentation violation.

2003-03-03  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* syntax.c (edit_read_syntax_rules): Check for list of defines
	is already initialized.